--- a/onnx_test.ipynb
+++ b/onnx_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "5439cd5d",
    "metadata": {
     "scrolled": true
@@ -24,7 +24,7 @@
       "('mode', 'test')\n",
       "('momentum', 0.925)\n",
       "('num_classes', 2)\n",
-      "('output_name', 'classifier')\n",
+      "('output_name', 'classifier_weights')\n",
       "('output_root', 'D:\\\\BackendAOI\\\\Python\\\\cnn\\\\save_model\\\\XML-282_chipping')\n",
       "('over_sampling_scale', 2)\n",
       "('over_sampling_thresh', 1000)\n",
@@ -80,7 +80,88 @@
       "pred =  0\n",
       "pred =  0\n",
       "pred =  0\n",
-      "pred =  0\n"
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "pred =  0\n",
+      "[0.6813020706176758, 1.0971534252166748, 0.9689996242523193, 0.923598051071167, 0.9474809169769287, 0.7960927486419678, 0.7373392581939697, 0.7151308059692383, 0.663231372833252, 0.6194109916687012, 0.665245532989502, 0.6472702026367188, 0.6273319721221924, 0.646500825881958, 0.6253688335418701, 0.5994007587432861, 0.7611329555511475, 0.7631726264953613, 0.7579770088195801, 0.6879875659942627, 0.6638646125793457, 0.7521843910217285, 1.0137598514556885, 1.1172139644622803, 1.0737080574035645, 0.9731554985046387, 1.2707087993621826, 1.02764892578125, 0.9278564453125, 0.9152460098266602, 0.7680225372314453, 0.80208420753479, 0.7456350326538086, 0.6655526161193848, 0.6715376377105713, 0.6924197673797607, 1.3959250450134277, 1.8552942276000977, 1.2636373043060303, 0.9579906463623047, 0.9477417469024658, 0.9854221343994141, 1.0097908973693848, 1.1199448108673096, 0.900111198425293, 0.8562312126159668, 0.7845408916473389, 0.6997888088226318, 0.663266658782959, 0.7787356376647949, 0.9164443016052246, 1.2581336498260498, 1.1081476211547852, 1.1497817039489746, 1.185854196548462, 0.9400880336761475, 0.8702266216278076, 0.7839617729187012, 0.7650690078735352, 0.7709636688232422, 0.7143650054931641, 0.710197925567627, 0.6949727535247803, 0.6702332496643066, 0.5580353736877441, 0.5425624847412109, 0.581496000289917, 0.6434481143951416, 0.815824031829834, 0.9192056655883789, 1.004317045211792, 0.8604893684387207, 0.7869157791137695, 0.775641918182373, 0.7170851230621338, 0.6911954879760742, 0.6907362937927246, 0.7172439098358154, 0.7635841369628906, 0.6662414073944092, 0.6577086448669434, 0.6172854900360107, 0.6243350505828857, 0.622065544128418, 0.6364226341247559, 0.5904228687286377, 0.5900459289550781, 0.5866196155548096, 0.584359884262085, 0.6006190776824951, 0.5837445259094238, 0.6158945560455322, 0.6228899955749512, 0.5981576442718506, 0.6085999011993408, 0.5794711112976074, 0.5797557830810547, 0.6134145259857178, 0.5950484275817871, 0.5814986228942871]\n"
      ]
     }
    ],
@@ -180,7 +261,7 @@
     "def test(opt):\n",
     "\n",
     "    opt.img_folder = r'D:\\List\\PK3078\\AO2201F\\onnx_test\\P'\n",
-    "    opt.weights = r'D:\\List\\PK3078\\AO2201F\\classifier\\best.pt'\n",
+    "    opt.weights = r'D:\\List\\PK3078\\AO2201F\\classifier_weights\\best.pt'\n",
     "    model = initialize_resnet34(opt.num_classes, opt.weights)\n",
     "    model = model.to(get_device())\n",
     "    model.eval()\n",
@@ -199,6 +280,7 @@
     "    os.makedirs(opt.img_folder+'\\\\output_report\\\\fail_output', exist_ok=True)\n",
     "    \n",
     "    print('\\n')\n",
+    "    time_list=[]\n",
     "    n = len(files)\n",
     "    with torch.no_grad():\n",
     "        for index, file in enumerate(files):\n",
@@ -207,19 +289,23 @@
     "            # img = center_crop(img, (512, 512))\n",
     "            img, ratio, pad = letterbox(img, (img_newsize, img_newsize))\n",
     "            \n",
+    "            start = time.time()\n",
     "            #inference for onnx\n",
     "            inputs = img.transpose((2, 0, 1))[::-1]  # HWC to CHW, BGR to RGB\n",
     "            inputs = np.ascontiguousarray(inputs)\n",
     "            inputs = inputs.astype(np.float32) / 255.0  # uint8 to float32, 0-255 to 0.0-1.0 \n",
     "            inputs = np.expand_dims(inputs, axis=0)\n",
     "\n",
-    "            session = onnxruntime.InferenceSession(r'D:\\List\\PK3078\\AO2201F\\classifier\\best.onnx', None)\n",
+    "            session = onnxruntime.InferenceSession(r'D:\\List\\PK3078\\AO2201F\\classifier_weights\\best.onnx', None)\n",
     "            input_name = session.get_inputs()[0].name\n",
     "            output_name = session.get_outputs()[0].name\n",
     "\n",
     "            result = session.run([output_name], {input_name: inputs})\n",
     "            prediction=int(np.argmax(np.array(result).squeeze(), axis=0))\n",
+    "            end = time.time()\n",
+    "            time_list.append(end - start)\n",
     "            print('pred = ', prediction)\n",
+    "        print(time_list)\n",
     "\n",
     "            ## inference for pt\n",
     "            # to tensor\n",
@@ -227,7 +313,7 @@
     "#             inputs = inputs.to(get_device())\n",
     "            \n",
     "#             outputs = []\n",
-    "#             outputs, conv_outputs = model(inputs)           \n",
+    "#             outputs, conv_outputs = model(inputs)          \n",
     "#             fc = list(model.fc.modules())[1]\n",
     "#             pred = int(torch.argmax(outputs[0]))\n",
     "#             print(f'[{index}/{n}] inference outputs = {outputs}, pred = {pred}, path = {file}') \n",
@@ -266,11 +352,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2432cfee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'time_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtime_list\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'time_list' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "time_list"
+   ]
   },
   {
    "cell_type": "code",
